[project]
name = "diabetes-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "catboost>=1.2.8",
    "category-encoders>=2.9.0",
    "imbalanced-learn>=0.14.0",
    "lightgbm>=4.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.2",
]
